src/objects/Order_Case__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <formula>Case__r.Assigned_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Product__c</fullName>
        <formula>Order__r.Base_Product_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT( Case__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>Case__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Cases</relationshipLabel>
        <relationshipName>Order_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Modified__c</fullName>
        <formula>Case__r.LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Order_Created__c</fullName>
        <formula>Order__r.Order_Date_Time_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Order Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Cases</relationshipLabel>
        <relationshipName>Order_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <formula>TEXT(Case__r.Queue__c)</formula>
        <label>Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Processing Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Order Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>